begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|rest
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|classification
operator|.
name|InterfaceAudience
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|classification
operator|.
name|InterfaceStability
import|;
end_import

begin_comment
comment|/**  * Common constants for org.apache.hadoop.hbase.rest  */
end_comment

begin_interface
annotation|@
name|InterfaceAudience
operator|.
name|Public
annotation|@
name|InterfaceStability
operator|.
name|Stable
specifier|public
interface|interface
name|Constants
block|{
comment|// All constants in a public interface are 'public static final'
name|String
name|VERSION_STRING
init|=
literal|"0.0.3"
decl_stmt|;
name|int
name|DEFAULT_MAX_AGE
init|=
literal|60
operator|*
literal|60
operator|*
literal|4
decl_stmt|;
comment|// 4 hours
name|int
name|DEFAULT_LISTEN_PORT
init|=
literal|8080
decl_stmt|;
name|String
name|MIMETYPE_TEXT
init|=
literal|"text/plain"
decl_stmt|;
name|String
name|MIMETYPE_HTML
init|=
literal|"text/html"
decl_stmt|;
name|String
name|MIMETYPE_XML
init|=
literal|"text/xml"
decl_stmt|;
name|String
name|MIMETYPE_BINARY
init|=
literal|"application/octet-stream"
decl_stmt|;
name|String
name|MIMETYPE_PROTOBUF
init|=
literal|"application/x-protobuf"
decl_stmt|;
name|String
name|MIMETYPE_PROTOBUF_IETF
init|=
literal|"application/protobuf"
decl_stmt|;
name|String
name|MIMETYPE_JSON
init|=
literal|"application/json"
decl_stmt|;
name|String
name|CRLF
init|=
literal|"\r\n"
decl_stmt|;
name|String
name|REST_KEYTAB_FILE
init|=
literal|"hbase.rest.keytab.file"
decl_stmt|;
name|String
name|REST_KERBEROS_PRINCIPAL
init|=
literal|"hbase.rest.kerberos.principal"
decl_stmt|;
name|String
name|REST_AUTHENTICATION_TYPE
init|=
literal|"hbase.rest.authentication.type"
decl_stmt|;
name|String
name|REST_AUTHENTICATION_PRINCIPAL
init|=
literal|"hbase.rest.authentication.kerberos.principal"
decl_stmt|;
name|String
name|REST_SSL_ENABLED
init|=
literal|"hbase.rest.ssl.enabled"
decl_stmt|;
name|String
name|REST_SSL_KEYSTORE_STORE
init|=
literal|"hbase.rest.ssl.keystore.store"
decl_stmt|;
name|String
name|REST_SSL_KEYSTORE_PASSWORD
init|=
literal|"hbase.rest.ssl.keystore.password"
decl_stmt|;
name|String
name|REST_SSL_KEYSTORE_KEYPASSWORD
init|=
literal|"hbase.rest.ssl.keystore.keypassword"
decl_stmt|;
name|String
name|REST_DNS_NAMESERVER
init|=
literal|"hbase.rest.dns.nameserver"
decl_stmt|;
name|String
name|REST_DNS_INTERFACE
init|=
literal|"hbase.rest.dns.interface"
decl_stmt|;
name|String
name|FILTER_CLASSES
init|=
literal|"hbase.rest.filter.classes"
decl_stmt|;
name|String
name|SCAN_START_ROW
init|=
literal|"startrow"
decl_stmt|;
name|String
name|SCAN_END_ROW
init|=
literal|"endrow"
decl_stmt|;
name|String
name|SCAN_COLUMN
init|=
literal|"column"
decl_stmt|;
name|String
name|SCAN_START_TIME
init|=
literal|"starttime"
decl_stmt|;
name|String
name|SCAN_END_TIME
init|=
literal|"endtime"
decl_stmt|;
name|String
name|SCAN_MAX_VERSIONS
init|=
literal|"maxversions"
decl_stmt|;
name|String
name|SCAN_BATCH_SIZE
init|=
literal|"batchsize"
decl_stmt|;
name|String
name|SCAN_LIMIT
init|=
literal|"limit"
decl_stmt|;
name|String
name|SCAN_FETCH_SIZE
init|=
literal|"hbase.rest.scan.fetchsize"
decl_stmt|;
name|String
name|SCAN_FILTER
init|=
literal|"filter"
decl_stmt|;
name|String
name|CUSTOM_FILTERS
init|=
literal|"hbase.rest.custom.filters"
decl_stmt|;
name|String
name|ROW_KEYS_PARAM_NAME
init|=
literal|"row"
decl_stmt|;
comment|/** If this query parameter is present when processing row or scanner resources,       it disables server side block caching */
name|String
name|NOCACHE_PARAM_NAME
init|=
literal|"nocache"
decl_stmt|;
block|}
end_interface

end_unit

